force-app/main/default/objects/Case_Team_Member__c/Case_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Case Team Member</label>
    <nameField>
        <displayFormat>CTM-{00000}</displayFormat>
        <label>Case Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>