force-app/main/default/objects/Case_Team_Member__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case Team Members</relationshipLabel>
    <relationshipName>Case_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>