force-app/main/default/objects/Case_Team_Member__c/fields/Immigration_Case__c.field-meta.xml
<CustomField>
    <fullName>Immigration_Case__c</fullName>
    <label>Immigration Case</label>
    <referenceTo>Immigration_Case__c</referenceTo>
    <relationshipLabel>Case Team Members</relationshipLabel>
    <relationshipName>Case_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>