force-app/main/default/objects/Case_Team_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Other Dependent</fullName>
            </value>
            <value>
                <fullName>Legal Representative</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Caseworker</fullName>
            </value>
            <value>
                <fullName>Observer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>